# python-fc-backend

./: .gitignore  main.py  model.py  pyproject.toml  sandbox_manager.py
agent/: __init__.py  prompt_reference.py  singleton_agent.py
agent_state/: __init__.py  state.py
api/: CHAT_ASSET_CONTEXT_FLOW.md  agent_api.py  asset_upload_routes.py  sandbox_routes.py  zip_download_api.py
checkpoint/: __init__.py  checkpointer.py
code_audit/: CHECKPOINTER_AUDIT_FINAL.md  MEMORY_STORE_AUDIT_REPORT.md  MONGODB_CHECKPOINTER_AUDIT_REPORT.md  MONGODB_CHECKPOINTER_FIXES.md  PRODUCTION_AUDIT.md  PRODUCTION_AUDIT_REDIS.md  SANDBOX_MANAGER_REVIEW.md
code_audit/db/: CONFIG_AUDIT.md  DATA_ACCESS_OPTIMIZATION.md  DB_AUDIT.md  DB_FINAL_REVIEW.md  DB_MANAGER_REVIEW.md  MODEL_CONSISTENCY_FIXES.md  MODEL_FIXES_APPLIED.md  MODEL_FIXES_VERIFICATION.md  OPTIMIZATIONS_APPLIED.md
code_audit/low_priority/: AGENT_PROMPT_UPDATES.md  AGENT_SINGLETON_FIXES_APPLIED.md  AGENT_SINGLETON_ISSUES.md  FACTORY_CODE_COMPARISON.md  (+7 more)
context/: __init__.py  runtime_context.py
db/: __init__.py  config.py  data_access.py  db_manager.py  models.py  service.py
processors/: document_processor.py  image_processor.py
redis_client/: __init__.py  redis_client.py
services/: zip_download_service.py
test/: test_sandbox.py  test_sandbox_manager.py
todo/: ZIP_DOWNLOAD_SERVICE_AUDIT.md  asset_upload.md  asset_upload_architecture.md
tools/: __init__.py  command_tools_e2b.py  edit_tools_e2b.py  file_tools_e2b.py  memory_tools.py  tool_loader.py  web_search_tool.py
vector_store/: __init__.py  vector_store.py
(+2 files in other folders)
